--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mijn Web Advenced Portfolio</title>
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 
 <body>
-    <h1>Mijn Web Advenced Portfolio</h1>
-
-
-
+    <h1> Mijn Portfolio van Web Advenced </h1>
 
 
 
