--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1> Mijn Portfolio van Web Advenced </h1>
+    <h1 id="mijn-hooft-tittle"> Mijn Portfolio </h1>
 
 
 
