--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <h1 id="mijn-hooft-tittle"> Mijn Portfolio </h1>
+    <h1 id="mijn-hooft-tittle"> Mijn Portfolio</h1>
+    <div class="clic event">
+        <h4> Hoeveel componenten zijn er bij defentie?</h4>
+        <button id="btn-1 "> 4 componenten</button>
+        <button id="btn-2 "> 5 componenten</button>
+        <p>zijn 4 componenten bij defentie</p>
+    </div>
+
 
 
 
