--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,12 +10,16 @@
 
 <body>
     <h1 id="mijn-hooft-tittle"> Mijn Portfolio</h1>
-    <div class="clic event">
+
+    <div class="klick-event box">
         <h4> Hoeveel componenten zijn er bij defentie?</h4>
         <button id="btn-1 "> 4 componenten</button>
         <button id="btn-2 "> 5 componenten</button>
         <p>zijn 4 componenten bij defentie</p>
     </div>
+
+
+
 
 
 
