--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,13 +18,38 @@
         <p>zijn 4 componenten bij defentie</p>
     </div>
 
+    <h2 class="text"> Maak een user account </h2>
+    <div id="mijnformilier">
+
+        <form action="/" method="GET">
+            <div>
+                <label for="Usernaam">Usernaam: </label>
+
+                <input type="text" id="usernaam" name="usernaam" required>
+            </div>
+            <div>
+                <label for="email">Email: </label>
+
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="password">Password: </label>
+
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Create </button>
+        </form>
+        <div id="errors">
+
+        </div>
 
 
 
 
 
 
-    <script src="portfolio.js"></script>
+
+        <script src="portfolio.js"></script>
 </body>
 
 </html>
