--- a/Portfolio.html
+++ b/Portfolio.html
@@ -32,7 +32,7 @@
                 <label for="password">Password: </label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit">Create </button>
+            <button type="submit">Valideren</button>
         </form>
         <div id="errors">
 
