--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,7 +17,8 @@
         <button id="btn-2"> 5 componenten</button>
         <p>zijn 4 componenten bij defentie</p>
     </div>
-    <h2 class=> Maak een user account </h2>
+
+    <h4 class=> Maak een user account </h4>
     <div id="mijnformilier">
         <form action="/" method="GET">
             <div>
@@ -94,7 +95,16 @@
                 <h1>User List</h1>
                 <div id="userList"></div>
             </div>
+            <div class="container">
+                <h1>Filmlijst</h1>
+                <ul id="filmList"></ul>
+            </div>
         </div>
+    </div>
+
+    <div class="sek">
+        <h1>Filmlijst</h1>
+        <ul id="filmList"></ul>
     </div>
 
     <script src="portfolio.js"></script>
